<resources>
    <string name="app_name">Sciflare Task</string>
    <string name="no_internet">It appears that the app is not connected to the internet. Please check your internet connection.</string>
    <string name="network_error">Network error, could receive data, please try again!</string>
    <string name="server_error">Server error, could receive data, please try again!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_your_name">Your Name</string>
    <string name="hint_date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="btn_join_us">Join Us!</string>
    <string name="error_enter_name">Enter your Name</string>
    <string name="error_enter_dob">Enter DOB</string>
    <string name="error_enter_mobile_no">Enter Mobile Number</string>
    <string name="error_invalid_mobile_no">Invalid Mobile Number</string>
    <string name="error_enter_email_id">Enter Email ID</string>
    <string name="error_invalid_email_id">Invalid Email ID</string>
    <string name="hint_select_date">Select date</string>
    <string name="msg_thank_for_registration">
        Thank you for your joining us.
        \nWelcome to Cancer Awareness App.
        \n\nPowered by:
        \nCancer Institute (WIA)</string>
    <string name="title_ok">Ok</string>
    <string name="msg_confirmation">Registration Confirmation</string>
    <string name="label_join_us">Join Us</string>
    <string name="error_dob">Enter DOB</string>
    <string name="no_data">No Data Found</string>
    <string name="retry">Retry</string>
    <string name="btn_register">Register!</string>
    <string name="registration">Registration</string>
    <string name="college">Your College</string>
    <string name="your_address">Your Address</string>
    <string name="user_id">User ID</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your Name</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="email">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="users">Users</string>
    <string name="location">Location</string>
    <string name="user_details">User Details</string>
    <string name="user_details_updated_successfully">User details updated successfully</string>
    <string name="update_user_details">Update User Details</string>
    <string name="clear_cache">Clear app cache</string>
    <string name="data_in_the_cache_has_been_cleared">Data in the cache has been cleared.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="current_location">Current Location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_access_required">Location permission access required</string>
    <string name="google_maps_key" translatable="false">AIzaSyBBaXroof_P9BSanewc-qy4ccsO4JvQCI0</string>
</resources>