<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_1"
    tools:context=".ui.components.fragment.more.profile.UpdateUserDetailsFragment">

    <include
        android:id="@+id/inclFuudHeader"
        layout="@layout/layout_app_header" />

    <ProgressBar
        android:id="@+id/pbFuudLoader"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateTint="@color/grey"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inclFuudHeader" />


    <com.task.utils.font.CustomFontEditTextRegular
        android:id="@+id/edtFuudUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/edt_registration_bg"
        android:hint="@string/your_name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions|textCapSentences"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@+id/pbFuudLoader" />

    <com.task.utils.font.CustomFontEditTextRegular
        android:id="@+id/edtFuudMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/edt_registration_bg"
        android:clickable="false"
        android:hint="@string/hint_mobile_number"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number|textNoSuggestions"
        android:maxLength="10"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@+id/edtFuudUserName" />

    <com.task.utils.font.CustomFontEditTextRegular
        android:id="@+id/edtFuudEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/edt_registration_bg"
        android:hint="@string/hint_email_id"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@+id/edtFuudMobileNo" />

    <RadioGroup
        android:id="@+id/rgFuudGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFuudEmail">

        <com.task.utils.font.CustomFontRadioButtonRegular
            android:id="@+id/rbFuudMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:buttonTint="@color/blue"
            android:layout_weight="0.05"
            android:text="@string/male" />

        <com.task.utils.font.CustomFontRadioButtonRegular
            android:id="@+id/rbFuudFemale"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_weight="0.05"
            android:text="@string/female" />

        <com.task.utils.font.CustomFontRadioButtonRegular
            android:id="@+id/rbFuudOther"
            android:layout_width="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.05"
            android:text="@string/other" />
    </RadioGroup>

    <com.task.utils.font.CustomFontButtonBold
        android:id="@+id/btnFuudSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/btn_registration_bg"
        android:text="@string/update"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/rgFuudGender" />

</androidx.constraintlayout.widget.ConstraintLayout>