<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/grey_1">

            <include
                android:id="@+id/inlRegistrationHeader"
                layout="@layout/layout_app_header" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glRegisterTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <ImageView
                android:id="@+id/imgRfLogo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="150sp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:src="@drawable/logo"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/glRegisterTop" />

            <com.task.utils.font.CustomFontEditTextRegular
                android:id="@+id/edtRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/edt_registration_bg"
                android:hint="@string/hint_your_name"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions|textCapWords"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/imgRfLogo" />

            <RadioGroup
                android:id="@+id/rgRegisterGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/edtRegisterName">

                <com.task.utils.font.CustomFontRadioButtonRegular
                    android:id="@+id/rbRegisterMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:buttonTint="@color/blue"
                    android:checked="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/hint_male"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <com.task.utils.font.CustomFontRadioButtonRegular
                    android:id="@+id/rbRegisterFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:buttonTint="@color/blue"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/hint_female"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </RadioGroup>

            <com.task.utils.font.CustomFontEditTextRegular
                android:id="@+id/edtRegisterDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edt_registration_bg"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/hint_date_of_birth"
                android:importantForAutofill="no"
                android:inputType="date|textNoSuggestions"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/rgRegisterGender" />

            <com.task.utils.font.CustomFontEditTextRegular
                android:id="@+id/edtRegisterMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edt_registration_bg"
                android:hint="@string/hint_mobile_number"
                android:importantForAutofill="no"
                android:inputType="number|textNoSuggestions"
                android:maxLength="10"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/edtRegisterDob" />

            <com.task.utils.font.CustomFontEditTextRegular
                android:id="@+id/edtRegisterEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edt_registration_bg"
                android:hint="@string/hint_email_id"
                android:importantForAutofill="no"
                android:inputType="text|textEmailAddress|textNoSuggestions"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/edtRegisterMobileNo" />

            <com.task.utils.font.CustomFontEditTextRegular
                android:id="@+id/edtRfCollegeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edt_registration_bg"
                android:hint="@string/college"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions|textCapSentences"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/edtRegisterEmailId" />

            <com.task.utils.font.CustomFontEditTextRegular
                android:id="@+id/edtRfAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/edt_registration_bg"
                android:hint="@string/your_address"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions|textMultiLine|textCapWords"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/edtRfCollegeName" />

            <ProgressBar
                android:id="@+id/pbrfLoader"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:indeterminate="true"
                android:indeterminateBehavior="cycle"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtRfAddress" />

            <com.task.utils.font.CustomFontButtonBold
                android:id="@+id/btnJoinUs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/btn_registration_bg"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtRfAddress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>