<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.task.utils.font.CustomFontTextViewBold
            android:id="@+id/tvTitleDialogHelperHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/_25sdp"
            android:text="@string/msg_confirmation"
            android:textColor="@color/grey"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.task.utils.font.CustomFontTextViewRegular
            android:id="@+id/tvDescriptionDialogHelperHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/msg_thank_for_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDialogHelperHint" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cslDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDialogHelperHint">


            <com.task.utils.font.CustomFontButtonBold
                android:id="@+id/btnDialogHelperPositive"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/btn_registration_bg"
                android:gravity="center"
                android:text="@string/title_ok"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/_15sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>